Fix overlay on mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -88,8 +88,10 @@ h3 {
     position: fixed;
     background-color:#000;
     opacity:0.5;
-    width:100%;
-    height:100%;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
     display: none;
 }
 
